workshop04/task/base/wordpress-ing.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: wordpress-ing
  labels:
    name: wordpress-ing
spec:
  ingressClassName: nginx
  rules:
    - host: tenant-144.126.243.156.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: wordpress-svc
                port: 
                  number: 80
